# active-perception-gym

./: .gitignore  README.md  pyproject.toml
ap_gym/: __init__.py  active_classification_env.py  active_perception_env.py  active_perception_vector_env.py  active_regression_env.py  circle_square_env.py  image_classification_vector_env.py  image_perception_vector_env.py  image_space.py  logit_space.py  loss_fn.py  mnist_env.py  registration.py  sparsify_wrapper.py  time_limit.py  types.py  util.py  vector_to_single_wrapper.py
ap_gym/envs/: circle_square.py  circle_square_catch_or_flee.py  huggingface_dataset.py  huggingface_image_classification.py  image_classification.py  image_localization.py  lidar_localization2d.py  lidar_localization2d_indoor.py  lidar_localization2d_maze.py  light_dark.py  localization2d.py  maze.py  mnist.py  (+2 more)
doc/: CIFAR10.md  CIFAR10Loc.md  CircleSquare.md  ImageClassification.md  ImageClassificationVectorEnv.md  ImageLocalization.md  ImageLocalizationVectorEnv.md  ImagePerceptionConfig.md  LIDARLocMaze.md  LIDARLocMazeStatic.md  LIDARLocRooms.md  LIDARLocRoomsStatic.md  LIDARLocRoomsstatic.md  LIDARLocalization.md  LIDARLocalization2DEnv.md  LightDark.md  MNIST.md  None.md  TinyImageNet.md  TinyImageNetLoc.md  advanced_usage.md  circle_square.md  image_classification.md  mnist.md
example/: circle_square.py  circle_square_vec.py  lidar_loc_indoor.py  lidar_loc_maze.py  lidar_loc_rooms.py  light_dark_vec.py  maze.py  tiny_image_net_loc_vec.py
test/: test_active_classification_env.py
tools/: create_env_gif.py  create_gifs.bash  mk_env_doc.py
(+16 files in other folders)
